2004-07-26  Miklos Szeredi <miklos@szeredi.hu>

	* Check permissions in setattr if 'default_permissions' flag is
	set.  Bug spotted by Damjan Lango

2004-07-14  Miklos Szeredi <miklos@szeredi.hu>

	* Released 1.3
	
2004-07-08  Miklos Szeredi <miklos@szeredi.hu>

	* When performing create or remove operation, refresh the parent's
	attributes on next revalidate, as i_nlink (and maybe size/time)
	could be inacurate.

2004-07-06  Miklos Szeredi <miklos@szeredi.hu>

	* Make RELEASE method synchronous.  This fixes an abort in libfuse
	if FORGET was received earlier than the last RELEASE (bug found
	with the LTP test-suite)

	* Fix file corruption in case of bigread option. (bug found with
	LTP)

	* Minor fix in read:  print debug info even if read size is zero

2004-07-04  Miklos Szeredi <miklos@szeredi.hu>

	* Fix race between truncate and writepage (fsx-linux now runs
	without error)

2004-07-02  Miklos Szeredi <miklos@szeredi.hu>

	* Fix kernel hang on mkfifo under 2.4 kernels (spotted and patch
	by Mattias Wadman)

	* Fix file offset wrap around at 4G when doing large reads

	* Change passing fuse include dir to 2.6 kernel make system more
	robust (hopefully fixes problems seen on SuSE 9.1)

	* Fix deadlock between page writeback completion and truncate
	(bug found by Valient Gough with the fsx-linux utility)


2004-06-22  Miklos Szeredi <miklos@szeredi.hu>

	* Released 1.2
	
2004-06-22  Miklos Szeredi <miklos@szeredi.hu>

	* Add FS_BINARY_MOUNTDATA filesystem flag for kernels that define
	it.  This fixes mount problems on recent 2.6 kernels with SELinux
	enabled
	
	* Merge bugfixes from main branch (see below)
	
2004-04-09  Miklos Szeredi <miklos@szeredi.hu>

	* Check some limits so userspace won't get too big requests

2004-04-05  Miklos Szeredi <miklos@szeredi.hu>

	* Kill compile warning

2004-03-02  Miklos Szeredi <miklos@szeredi.hu>

	* Fix for uClinux (Christian Magnusson)

2004-02-12  Miklos Szeredi <miklos@szeredi.hu>
