@@ -62,12 +62,17 @@ static int request_restartable(enum fuse_opcode opcode)
 }
 
 /* Called with fuse_lock held.  Releases, and then reaquires it. */
-static void request_wait_answer(struct fuse_req *req)
+static void request_wait_answer(struct fuse_req *req, int interruptible)
 {
 	int intr;
 	
 	spin_unlock(&fuse_lock);
-	intr = wait_event_interruptible(req->waitq, req->finished);
+	if (interruptible)
+		intr = wait_event_interruptible(req->waitq, req->finished);
+	else {
+		wait_event(req->waitq, req->finished);
+		intr = 0;
+	}
 	spin_lock(&fuse_lock);
 	if(!intr)
 		return;
@@ -112,14 +117,17 @@ static void request_end(struct fuse_conn *fc, struct fuse_req *req)
 	}
 }
 
-void request_send(struct fuse_conn *fc, struct fuse_in *in,
-		  struct fuse_out *out)
+void __request_send(struct fuse_conn *fc, struct fuse_in *in,
+		    struct fuse_out *out, int interruptible)
 {
 	struct fuse_req *req;
 
-	out->h.error = -ERESTARTSYS;
-	if(down_interruptible(&fc->outstanding))
-		return;
+	if (interruptible) {
+		out->h.error = -ERESTARTSYS;
+		if(down_interruptible(&fc->outstanding))
+			return;
+	} else
+		down(&fc->outstanding);
 
 	out->h.error = -ENOMEM;
 	req = request_new();
@@ -135,7 +143,7 @@ void request_send(struct fuse_conn *fc, struct fuse_in *in,
 			in->h.unique = get_unique(fc);		
 			list_add_tail(&req->list, &fc->pending);
 			wake_up(&fc->waitq);
-			request_wait_answer(req);
+			request_wait_answer(req, interruptible);
 			list_del(&req->list);
 		}
 		spin_unlock(&fuse_lock);
@@ -145,6 +153,17 @@ void request_send(struct fuse_conn *fc, struct fuse_in *in,
 	up(&fc->outstanding);
 }
 
+void request_send(struct fuse_conn *fc, struct fuse_in *in,
+		  struct fuse_out *out)
+{
+	__request_send(fc, in, out, 1);
+}
+
+void request_send_nonint(struct fuse_conn *fc, struct fuse_in *in,
+			 struct fuse_out *out)
+{
+	__request_send(fc, in, out, 0);
+}
 
 static inline void destroy_request(struct fuse_req *req)
 {
