@@ -1,3 +1,9 @@
+2004-08-16  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Change release method to be non-interruptible.  Fixes bug
+	causing missing release() call when program which has opened files
+	is killed (reported by Franco Broi and David Shaw)
+ 
 2004-07-26  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Check permissions in setattr if 'default_permissions' flag is
